# blazon

./: Cargo.toml  Justfile  README.md
.github/workflows/: binaries.yml
.just/: cargo.just  emblazon.just  hooks.just  release.just
blazon/: CHANGELOG.md  Cargo.toml  README.md
blazon-core/: CHANGELOG.md  Cargo.toml  README.md
blazon-core/src/: badge.rs  debug.rs  formatter.rs  lib.rs
blazon-core/tests/: basic.rs  integration.rs
blazon-core/tests/conformance/: basic.rs  batch.rs  compare.rs  helpers.rs  roundtrip.rs
blazon-core/tests/conformance/helpers/: comparison.rs  roundtrip.rs
blazon-core/tests/nodes/: block.rs  enumdef.rs  implblock.rs  main.rs  module.rs  structdef.rs  useitem.rs
blazon/src/: cli.rs  lib.rs
blazon/src/cli/: args.rs  report.rs  worker.rs
blazon/tests/: cli.rs
blazon/tests/snapshots/: cli__help_flag.snap
