[package]
description = "Core functionality for blazon - a fast minimal badge generator for Rust crate stats"
documentation = "https://docs.rs/blazon-core"
edition.workspace = true
homepage = "https://github.com/lmmx/blazon"
include = ["README.md", "src/**/*"]
license.workspace = true
name = "blazon-core"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.3"

[features]
default = []

[dependencies]
textum = { features = ["facet"], version = "0.4.0" }

[dev-dependencies]
braces = "0.2.6"
duct = "1.1.1"
imara-diff = "0.2.0"
insta.workspace = true
rust-format = "0.3.4"
tempfile.workspace = true
walkdir = "2.5.0"
