[[bin]]
name = "blazon"
path = "src/cli.rs"
required-features = ["cli"]

[package]
description = "A fast minimal badge generator for Rust crate stats"
documentation = "https://docs.rs/blazon"
edition.workspace = true
homepage = "https://github.com/lmmx/blazon"
include = ["README.md", "src/**/*"]
license.workspace = true
name = "blazon"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[package.metadata.binstall]
pkg-fmt = "tgz"
pkg-url = "https://github.com/lmmx/blazon/releases/download/blazon-v{ version }/blazon-{ target }-v{ version }.tar.gz"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
pkg-url = "https://github.com/lmmx/blazon/releases/download/blazon-v{ version }/blazon-aarch64-pc-windows-msvc-v{ version }.zip"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
pkg-url = "https://github.com/lmmx/blazon/releases/download/blazon-v{ version }/blazon-x86_64-pc-windows-msvc-v{ version }.zip"

[features]
cli = ["dep:facet", "dep:facet-args", "dep:miette"]
default = []

[dependencies]
blazon-core = { workspace = true }

# Optional dependencies for CLI
facet = { optional = true, workspace = true }
facet-args = { optional = true, workspace = true }
miette = { default-features = false, features = [
  "fancy",
], optional = true, version = "7.6.0" }

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
predicates = "3.1.3"
tempfile.workspace = true

# [lints.clippy]
# all = "deny"
# cargo = "deny"
# pedantic = "deny"
#
# [lints.rust]
# missing_docs = "deny"
# unsafe_code = "forbid"
